--- a/arch/x86/Kconfig
+++ b/arch/x86/Kconfig
@@ -3128,4 +3128,6 @@ config HAVE_ATOMIC_IOMAP
 
 source "arch/x86/kvm/Kconfig"
 
+source "arch/x86/Kconfig.cpufeatures"
+
 source "arch/x86/Kconfig.assembler"
